--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             <li>Een link naar Digidoc Desktop.</li>
             <li>Een doorverwijslink via digidoclink.nl. Hiermee krijgt de gebruiker na het klikken op de link de keuze tussen Digidoc Online en Digidoc Desktop.</li>
         </ol>
-        <p>Digidoclink.nl heeft geen toegang tot de inhoud van Digidoc, noch invloed op die toegang.</p>
+        <p>Digidoclink.nl is veilig te gebruiken. Het heeft geen invloed op wie er toegang heeft tot Digidoc.</p>
 
         <h2>Gebruik</h2>
         <p>Voer hieronder een door Digidoc gemaakte link in:</p>
